- Fixed typeahead positioning - Improved z-index ordering of several components

--- a/src/sass/generator.scss
+++ b/src/sass/generator.scss
@@ -204,7 +204,7 @@ html {
 
 /* Bootstrap typeahead styles */
 .typeahead {
-  z-index: 1051;
+  z-index: 930;
 
   a {
     text-decoration:none;
