--- a/src/sass/partials/_bootstrap.scss
+++ b/src/sass/partials/_bootstrap.scss
@@ -107,7 +107,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 1000;
+  z-index: 950;
   display: none;
   float: left;
   min-width: 160px;
